@@ -24,4 +24,5 @@ com.openexchange.groupware.update.tasks.NewAdminExtensionsUpdateTask
 com.openexchange.groupware.update.tasks.InfostoreRenamePersonalInfostoreFolders
 # Version 10
 com.openexchange.groupware.calendar.update.UpdateFolderIdInReminder
-
+# Version 11
+com.openexchange.groupware.update.tasks.ClearLeftoverAttachmentsUpdateTask
