@@ -1,3 +1,5 @@
+package com.openexchange.groupware.attach.impl;
+
 /*
  *
  *    OPEN-XCHANGE legal information
@@ -47,105 +49,36 @@
  *
  */
 
-package com.openexchange.groupware.attach.util;
 
-import java.util.Date;
+import com.openexchange.api2.OXException;
+import com.openexchange.groupware.attach.AttachmentBase;
+import com.openexchange.groupware.delete.ContextDelete;
+import com.openexchange.groupware.delete.DeleteEvent;
+import com.openexchange.groupware.delete.DeleteFailedException;
+import com.openexchange.groupware.tx.ThreadLocalDBProvider;
+import com.openexchange.tools.exceptions.LoggingLogic;
 
-import com.openexchange.groupware.attach.*;
+import java.sql.Connection;
 
-public class SetSwitch implements AttachmentField.AttachmentSwitch{
-	
-	private AttachmentMetadata attachment;
-	private Object value;
 
-	public SetSwitch(final AttachmentMetadata attachment) {
-		this.attachment = attachment;
-	}
-	
-	public void setValue(final Object value) {
-		this.value = value;
-	}
-	
-	public Object createdBy() {
-		if(value == null) {
-			value = Integer.valueOf(-1);
-		}
-		attachment.setCreatedBy(((Integer)value).intValue());
-		return null;
-	}
+public class AttachmentContextDelete extends ContextDelete {
+    private final ThreadLocalDBProvider provider = new ThreadLocalDBProvider();
+    private
+    final AttachmentBase ATTACHMENT_BASE = new AttachmentBaseImpl(provider); // No notifications, no permission check.
 
-	public Object id() {
-		if(value == null) {
-			value = Integer.valueOf(-1);
-		}
-		attachment.setId(((Integer)value).intValue());
-		return null;
-	}
+    private static final LoggingLogic LL = LoggingLogic.getLoggingLogic(AttachmentContextDelete.class);
 
-	public Object moduleId() {
-		if(value == null) {
-			value = Integer.valueOf(-1);
-		}
-		attachment.setModuleId(((Integer)value).intValue());
-		return null;
-	}
 
-	public Object attachedId() {
-		if(value == null) {
-			value = Integer.valueOf(-1);
-		}
-		attachment.setAttachedId(((Integer)value).intValue());
-		return null;
-	}
-
-	public Object fileSize() {
-		if(value == null) {
-			value = Integer.valueOf(0);
-		}
-		attachment.setFilesize(((Long)value).longValue());
-		return null;
-	}
-
-	public Object fileMIMEType() {
-        if(value != null) {
-            attachment.setFileMIMEType(value.toString());            
+    public void deletePerformed(DeleteEvent deleteEvent, Connection readCon, Connection writeCon) throws DeleteFailedException {
+        provider.setReadConnection(readCon);
+        provider.setWriteConnection(writeCon);
+        try{
+            ATTACHMENT_BASE.deleteAll(deleteEvent.getContext());
+        } catch (OXException e) {
+            LL.log(e);
+            throw new DeleteFailedException(DeleteFailedException.Code.UNKNOWN_TYPE,e);
+        } finally {
+            provider.reset();
         }
-        return null;
-	}
-
-	public Object creationDate() {
-		attachment.setCreationDate((Date)value);
-		return null;
-	}
-
-	public Object folderId() {
-		if(value == null) {
-			value = Integer.valueOf(-1);
-		}
-		attachment.setFolderId(((Integer)value).intValue());
-		return null;
-	}
-	
-	public Object fileName(){
-		attachment.setFilename((String)value);
-		return null;
-	}
-	
-	public Object rtfFlag(){
-		if(value == null) {
-			value = Boolean.FALSE;
-		}
-		attachment.setRtfFlag(((Boolean)value).booleanValue());
-		return null;
-	}
-
-	public Object comment() {
-		attachment.setComment((String)value);
-		return null;
-	}
-	
-	public Object fileId() {
-		attachment.setFileId((String)value);
-		return null;
-	}
+    }
 }
